# n-body-simulator

./: .gitignore  README.md  main.sh  makefile  nbody_simulator  pyproject.toml  requirements.txt  setup.py
docs/: cpp_to_py_lib.md
docs/diagrams/: .$inheritance_figure.drawio.bkp  .$sun-earth-moon-example.drawio.bkp  body-kosmos_uml  body-universe_inherit.drawio  inheritance_figure.drawio
nbody/: __init__.py
src/: bindings.cpp  constants.h  main.cpp
src/body/: body.cpp  body.hpp
src/kosmos/: kosmos.cpp  kosmos.hpp
src/test/: multithread.cpp  multithread.h  orbit.cpp  orbit.h  solar_system.cpp  solar_system.h
